--- a/templates/counselor/counselor_home.html
+++ b/templates/counselor/counselor_home.html
@@ -621,7 +621,10 @@ th, td {
                                 <i class='bx bx-layer nav__icon' ></i>
                                 <span class="nav__name">View Schedule</span>
                             </a>
-
+    <a href="{% url 'counselor_view_feedback' %}" class="nav__link">
+                                <i class='bx bx-layer nav__icon' ></i>
+                                <span class="nav__name">View Feedback</span>
+                            </a>
                             
                         </div>
     
