--- a/templates/admin/offering.html
+++ b/templates/admin/offering.html
@@ -5,18 +5,119 @@ Schedule
 {% endblock %} 
 
 {% block content %} 
-<br> <br>
-<form method="POST" action="">
-    {% csrf_token %}
-    {{form.as_table}} 
-  
+<style>
+.offering{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 600px;
+  height: 300px;
+  border-radius: 5px;
+  background-color: #E3E4FA;
+  float: center;
+margin: auto;
+  text-align: center;
+   line-height: 40px; 
+}
+#id_semester{
+  width: 150px;
+}
+#id_school_year{
+  width: 200px;
+}
+.column{
+ width:250px;
+ float:center;
+ margin-right:20px;
+ padding: 10px;   
+ text-align: left;
+}
+.row{
+ width: 450px;
+ float:center;
+ text-align: left;
+}
+.row1{
+ width: 450px;
+ float:left;
+ text-align: left;
+}
+
+/* BUTTONS */
+.buttons{
+  margin: auto;
+  float: center;
+  height: 36px;
+  border: 5em;
+  cursor: pointer;
+  outline: none;
+  font-size: 16px;
+  -webkit-transform: translate(0);
+  transform: translate(0);
+  background-image: linear-gradient(45deg, #98b4ac, #4863A0);
+  padding: 0.7em 2em;
+  border-radius: 65px;
+  box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
+  -webkit-transition: box-shadow 0.25s;
+  transition: box-shadow 0.25s;
+  color: white;
+}
+.buttons .text {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(45deg, #4863A0, #98b4ac);
+}
+
+.buttons:after {
+  content: "";
+  border-radius: 18px;
+  position: absolute;
+  margin: 4px;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  background: #E5E4E2;
+}
+
+.buttons:hover {
+  background-image: linear-gradient(-45deg, #98b4ac, #4863A0);
+  box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
+}
+
+.buttons:hover .text {
+  background-image: linear-gradient(-45deg, #4863A0, #98b4ac);
+}
+
+  </style>
 <br>
-  <button class="btn success" style="font-weight: bold;">Submit</button>
+<div class="offering">
+  <form method="POST" action="">
+    {% csrf_token %}
+    
+    <div class="column">
+      <div class="row"> 
+        <p class="pText"><b class="bText">Choose Semester: &nbsp;</b> {{form.semester}}</p>
+        <p class="pText"><b class="bText">School Year: &nbsp;</b>  {{form.school_year}}</p>
+        &nbsp;    &nbsp;   
+      </div>
+     
+      </div>
+    <br> <br> <br>
+      <div class="column">
+        <div class="row"> 
+          <p> <button class="buttons" style="font-weight: bold; margin: auto; color: #454545;">Submit</button></p> 
+        </div>
+       
+        </div>
+<br>
 </form>
 
 {% for message in messages %}
                     <center> <p>{{message}}</p> </center>
                 {% endfor %}
-    
+  
+                  
+  </div>
 
 {% endblock %}
