--- a/templates/admin/viewoffering.html
+++ b/templates/admin/viewoffering.html
@@ -1,142 +1,157 @@
 {% extends "admin/admin_home.html" %}
 
 {% block title %} 
-Schedule
+View Offer
 {% endblock %} 
+
 
 {% block content %} 
 <style>
-  /* === TABLE ==== */
-  .table-box
-  {
-  
-  margin-bottom: 40px;
-  margin-left: 150px;
-  vertical-align:top;
-  }
-  
-  /* .table-row{
-  display: table;
-  width: 40%;
-  margin: 10px auto;
-  font-family: sans-serif;
-  background: transparent;
-  padding: 4px 0;
-  color: #555;
-  font-size: 13px;
-  box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-  height: 0.1%;
-  border-radius: 20px;
-  margin-top: 50px;
-  
-  } */
-  .table-head{
-  
-  background: greenyellow;
-  box-shadow: none;
-  color: #fff;
-  font-weight: 600;
-  line-height: 5px;
-  box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-  width: 500px;
-  margin-left: 355px;
-  border-radius: 20px;
-  }
-  .table-head .table-cell{
-  border-right: none;
-  }
-  .table-cell{
-  display: table-cell;
-  width: 20%;
-  text-align: center;
-  padding: 4px 0;
-  border-right: 1px solid #838996;
-  vertical-align: middle;
-  }
-  .first-cell{
-  text-align: left;
-  padding-left: 10px;
-  width: 8%;
-  }
-  .last-cell{
-  border-right: none;
-  width: 15px;
-  }
-  /* a{
-  textdecoration: none;
-  color: #555;
-  } */
-  p{
-  font-size: 17px;
-  color: black;
-  }
-  .listTitle{
-  font-size: 20px;
-  text-align: center;
-  }
-  @media only screen and (max-width: 600px) {
-  .table-row {
-  font-size: 11px;
-  }
-  }
-  .trow-list{
-  display:inline-block;
-  width: 85%;
-  
-  font-family: sans-serif;
-  background: transparent;
-  padding: 4px 0;
-  color: #555;
-  font-size: 13px;
-  
-  height: 15px;
-  
-  
-  vertical-align:top;
-  margin-bottom: 100px;
-  
-  }
+
+/* Table Styles */
+
+.table-wrapper{
+    margin: 10px 70px 70px;
+    box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+}
+
+.fl-table {
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: normal;
+    border: none;
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 100%;
+    white-space: nowrap;
+    background-color: white;
+    overflow-y: scroll;
+}
+
+.fl-table td, .fl-table th {
+    text-align: center;
+    padding: 8px;
+}
+
+.fl-table td {
+    border-right: 1px solid #f8f8f8;
+    font-size: 12px;
+}
+
+.fl-table thead th {
+    color: #ffffff;
+    background: #4863A0;
+}
+
+.fl-table thead th:nth-child(odd) {
+    color: #ffffff;
+    background: #4863A0;
+}
+
+.fl-table tr:nth-child(even) {
+    background: #F8F8F8;
+}
+
+/* Responsive */
+
+@media (max-width: 767px) {
+    .fl-table {
+        display: block;
+        width: 100%;
+    }
+    .table-wrapper:before{
+        content: "Scroll horizontally >";
+        display: block;
+        text-align: right;
+        font-size: 11px;
+        color: white;
+        padding: 0 0 10px;
+    }
+    .fl-table thead, .fl-table tbody, .fl-table thead th {
+        display: block;
+    }
+    .fl-table thead th:last-child{
+        border-bottom: none;
+    }
+    .fl-table thead {
+        float: left;
+    }
+    .fl-table tbody {
+        width: auto;
+        position: relative;
+        overflow-x: auto;
+    }
+    .fl-table td, .fl-table th {
+        padding: 20px .625em .625em .625em;
+        height: 60px;
+        vertical-align: middle;
+        box-sizing: border-box;
+        overflow-x: hidden;
+        overflow-y: auto;
+        width: 120px;
+        font-size: 13px;
+        text-overflow: ellipsis;
+    }
+    .fl-table thead th {
+        text-align: left;
+        border-bottom: 1px solid #f7f7f9;
+    }
+    .fl-table tbody tr {
+        display: table-cell;
+    }
+    .fl-table tbody tr:nth-child(odd) {
+        background: none;
+    }
+    .fl-table tr:nth-child(even) {
+        background: transparent;
+    }
+    .fl-table tr td:nth-child(odd) {
+        background: #F8F8F8;
+        border-right: 1px solid #E6E4E4;
+    }
+    .fl-table tr td:nth-child(even) {
+        border-right: 1px solid #E6E4E4;
+    }
+    .fl-table tbody td {
+        display: block;
+        text-align: center;
+    }
+}
 </style>
-
-<div class="table-cont">
-  <div class="table-row table-head">
-<div class="table-cell first-cell">
-<p class="listTitle">Schedules</p>
-</div>
-</div>  
-
+<br>
 {% if not forms %}
 No Data
 {% endif %}
-<table class="table">
-<thead>
-<tr>
-<th>Offer Code</th>
-<th>Days</th>
-<th>Time</th>
-<th>Room</th>
-<th>Subject Code</th>
-<th>Academic Year</th>
-
-
-</tr>
-</thead>
 <br>
-
-{% for form in forms %}
-
-<tbody>
-<tr>
-  <td> {{form.offer_code}}</td>
-<td>{{form.days}}</td>
-<td><a>{{form.start_time}} - {{form.end_time}}</a></td>
-<td><a>{{form.room}}</a></td>
-<td><a>{{form.subject_code}}</a></td>
-<td><a>  {{form.school_year}}</a></td>
-</tr>
-</tbody>
-
+<div class="table-wrapper">
+  <table class="fl-table">
+      <thead>
+      <tr>
+          <th>Offer Code</th>
+          <th>Days</th>
+          <th>Time</th>
+          <th>Room</th>
+          <th>Subject Code</th>
+          <th>Academic Year</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        {% for form in forms %}
+          <td>{{form.offer_code}}</td>
+          <td>{{form.days}}</td>
+          <td>{{form.start_time}} - {{form.end_time}} </td>
+          <td>{{form.room}}</td>
+          <td>{{form.subject_code}}</td>
+          <td>{{form.school_year}}</td>
+          
 {% endfor %}
-</table>
+      </tr>
+      <tbody>
+  </table>
 </div>
+
+
+
+
 {% endblock %}
