--- a/templates/counselor/pending_students.html
+++ b/templates/counselor/pending_students.html
@@ -118,7 +118,7 @@ font-weight: 600;
 line-height: 5px;
 box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
 width: 500px;
-margin-left: 355px;
+margin: auto;
 border-radius: 20px;
 }
 .table-head .table-cell{
