--- a/templates/admin/viewoffering.html
+++ b/templates/admin/viewoffering.html
@@ -143,7 +143,7 @@ No Data
           <td>{{form.start_time}} - {{form.end_time}} </td>
           <td>{{form.room}}</td>
           <td>{{form.subject_code}}</td>
-          <td>{{form.school_year}}</td>
+          <td>{{form.academic_year}}</td>
           
 {% endfor %}
       </tr>
