--- a/templates/teacher/teacher_home.html
+++ b/templates/teacher/teacher_home.html
@@ -703,7 +703,7 @@ p{
         <div class="nav" id="navbar">
             <nav class="nav__container">
                 <div>
-                    <a href="#" class="nav__link nav__logo">
+                    <a href="{% url 'teacher_home_view' %}" class="nav__link nav__logo">
                       <i class='bx bx-user nav__icon' ></i>
                       <span class="nav__logo-name">TEACHER</span>
                     </a>
