--- a/templates/counselor/counselor_home.html
+++ b/templates/counselor/counselor_home.html
@@ -212,7 +212,7 @@ img {
 
 .nav__name {
   font-size: var(--small-font-size);
-  font-weight: var(--font-medium);
+  font-weight: var(--font-semi-bold);
   white-space: nowrap;
 }
 
@@ -618,11 +618,11 @@ th, td {
                             
                             
                             <a href="{% url 'counselor_view_schedule' %}" class="nav__link">
-                                <i class='bx bx-layer nav__icon' ></i>
+                                <i class='bx bx-calendar nav__icon' ></i>
                                 <span class="nav__name">View Schedule</span>
                             </a>
     <a href="{% url 'counselor_view_feedback' %}" class="nav__link">
-                                <i class='bx bx-layer nav__icon' ></i>
+                                <i class='bx bx-note nav__icon' ></i>
                                 <span class="nav__name">View Feedback</span>
                             </a>
                             
@@ -658,5 +658,6 @@ th, td {
 
         <!--========== MAIN JS ==========-->
         <script src="main.js"></script>
+
     </body>
 </html>
