--- a/templates/counselor/feedback.html
+++ b/templates/counselor/feedback.html
@@ -177,7 +177,7 @@ margin-bottom:15px;
              {{object.remarks}}
              <p class="pText"><b class="bText">Prepared by: &nbsp;</b> {{info2.firstname}} {{info2.lastname}}</p>
             <br> 
-            <button class="buttons" style="font-weight: bold;">Submit</button>
+            <button class="buttons" style="font-weight: bold; color: #454545;">Submit</button>
             </form>
 
 <br>
