--- a/templates/counselor/referred_students.html
+++ b/templates/counselor/referred_students.html
@@ -203,7 +203,7 @@ margin-left: 15px;
   No Referrals Yet!
 {% endif %}
 <br>
-<table class="table">
+<table class="table" style="color: #4863A0;">
 <thead>
 <tr>
 <th>ID Number</th>
