--- a/templates/uploaddb/uploaddb_department.html
+++ b/templates/uploaddb/uploaddb_department.html
@@ -2,11 +2,95 @@
 {% block title %} Upload Department {% endblock %}
 {% block content %}
  
-<h1>Upload Department </h1> <br>
- <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <input type="file" name="myfile">
-    <button type="submit">Upload</button>
-  </form>
+<style>
+.faculty{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  height: 300px;
+  border-radius: 5px;
+  background-color: #E3E4FA;
+  float: center;
+  margin: auto;
+   line-height: 40px; 
+}
+.wrap {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
 
+.button {
+  margin: 0 auto;
+  width: 140px;
+  height: 30px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  }
+
+.button:hover {
+  background-color: #95B9C7;
+  box-shadow: 0px 15px 20px #C9C0BB;
+  color: #fff;
+  transform: translateY(-7px);
+}
+.fac{
+  height: 20%;
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  padding: 15px;
+}
+
+.buttonF {
+  width: 250px;
+  height: 45px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #4863A0;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  }
+
+</style>
+<div class="faculty">
+  <div class="fac">
+    <button type="submit" class="buttonF">Upload Department</button>
+  </div> 
+<br>
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <input type="file" name="myfile" style="float: center;">
+   <br> <br>
+    <div class="wrap">
+      <button type="submit" class="button">Upload</button>
+    </div>
+  </form>
+  {% for message in messages %}
+  <center> <p>{{message}} !</p> </center>
+{% endfor %}
+
+                
+</div>
   {% endblock %}
